--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     }
     
     body {
+        width:80px;
         background-image: url("./big.jpg");
         background-size: cover;
         background-position: center;
@@ -67,4 +68,5 @@
         div {
             margin-top: 0;
         }
+
     }
