--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h1 {
     margin-top: 10%;  
     align-items: center;  
     justify-content: center;  
-    margin-left: 35%;  
+    margin-left: ;  
 }  
   
 @media only screen and (max-width: 768px) {  
@@ -70,3 +70,4 @@ h1 {
     }  
 
 }
+
