--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body{
   background-image:url("./big.jpg");
+  background-size:cover;
+  background-position: center;
+  background-repeat:no-repeat
 }
+
 
 
 
