--- a/style.css
+++ b/style.css
@@ -4,12 +4,10 @@ body{
   background-position: center;
   background-repeat:no-repeat
 }
-h1{
+.vid{
   color: white;
 }
-p{
-  color: white;
-}
+
 
 
 
