--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1{
 .vid{
   margin-buttom:10px;
 }
-.vid p{
+p{
   color: white;
   background-color:black;
   border-radius:10px;
@@ -18,7 +18,9 @@ h1{
 a{
   background-color: white;
   border-radius:10px;
+  color: white;
 }
+
 
 
 
