--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1{
 /* Link styling */
 a {
     background-color: black;
-    color: white;
+    color: black;
     text-decoration: none; /* removes underline */
     padding: 10px 15px;
     border-radius: 5px; /* optional */
@@ -34,6 +34,7 @@ a:hover {
     color: black;
     border: 1px solid black;
 }
+
 
 
 
