--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ h1{
 
 /* Link styling */
 a {
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     text-decoration: none; /* removes underline */
     padding: 10px 15px;
     border-radius: 5px; /* optional */
@@ -34,6 +34,7 @@ a:hover {
     color: white;
     border: 1px solid black;
 }
+
 
 
 
