--- a/style.css
+++ b/style.css
@@ -54,6 +54,9 @@ a:hover {
   color: black;
   border: 1px solid black;
 }
+img{
+  margin-left:-20%;
+}
 
 /* 📱 Small screens (phones) */
 @media screen and (max-width: 600px) {
@@ -84,5 +87,6 @@ a:hover {
     margin-right:40%;
   }
 }
+
 
 
