--- a/style.css
+++ b/style.css
@@ -57,6 +57,9 @@ a:hover {
 img{
   margin-left:-20%;
 }
+.up{
+  margin-right:-25%;
+}
 
 /* 📱 Small screens (phones) */
 @media screen and (max-width: 600px) {
@@ -87,6 +90,7 @@ img{
     margin-right:40%;
   }
 }
+
 
 
 
